# Dyanamic-Trajectory-Generator

./: TECHNICAL_DETAILS.md
nbv_planner/: pyproject.toml  requirements.txt
nbv_planner/config/: planner_params.yaml  robot_params.yaml  sensor_params.yaml
nbv_planner/data/: bunny_ground_truth.npz  bunny_mesh.ply  femoral_surface_ground_truth.npz  femoral_surface_mesh.ply  sphere_ground_truth.npz  sphere_mesh.ply
nbv_planner/results/baseline/: bunny_arc.npz  bunny_raster.npz  sphere_arc.npz  sphere_raster.npz
nbv_planner/scripts/: compare_methods.py  generate_scene.py  run_fixed_baseline.py  run_greedy_nbv.py  run_sequence_opt.py  visualize_plan.py  visualize_results.py
nbv_planner/src/nbv_planner/: __init__.py
nbv_planner/src/nbv_planner.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
nbv_planner/src/nbv_planner/metrics/: __init__.py  evaluation.py
nbv_planner/src/nbv_planner/planner/: __init__.py  baseline_fixed.py  greedy_nbv.py  information_gain.py  sequence_optimizer.py  viewpoint_sampler.py
nbv_planner/src/nbv_planner/representation/: __init__.py  coverage_tracker.py  voxel_grid.py
nbv_planner/src/nbv_planner/robot/: __init__.py  ik_validator.py  workspace.py
nbv_planner/src/nbv_planner/scene/: __init__.py  ground_truth_cloud.py  synthetic_scene.py
nbv_planner/src/nbv_planner/sensor/: __init__.py  camera_model.py  depth_simulator.py
nbv_planner/src/nbv_planner/visualization/: __init__.py  metrics_viz.py  (+1 more)
nbv_planner/tests/: test_information_gain.py  test_planner.py  test_sensor_model.py  test_viewpoint_sampler.py  test_voxel_grid.py
(+10 files in other folders)
